# loom

./: .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
development/: README.md  bun.lockb  index.html  package.json
development/src/: main.ts
development/src/rendering/: primitive.ts  utils.ts
docs/: api.md
examples/desktop/: CMakeLists.txt
examples/desktop/ebike-display/: CMakeLists.txt
examples/desktop/ebike-display/scripts/: build.sh  run.sh
examples/desktop/ebike-display/src/: main.c
include/: loom.h
include/core/: core.h
include/loom/: loom.h  loom_esp_idf.h  types.h
scripts/: run.sh
src/: CMakeLists.txt  loom.c  loom_command.c  loom_internal.h  loom_platform.c  loom_raster.c
src/core/: core.c
src/platform/esp_idf/: loom_esp_idf.c
tests/: loom_smoke_test.c
